add dalle Routes

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
+OPENAI_API_KEY=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
 MONGODB = 'mongodb+srv://khalfiaymenfl:khalfiaymenfl@cluster0.kws1e9o.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
