--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,7 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=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
 MONGODB = 'mongodb+srv://khalfiaymenfl:khalfiaymenfl@cluster0.kws1e9o.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+
+CLOUDINARY_CLOUD_NAME="drd8ryhdt"
+CLOUDINARY_API_KEY="497321778186475"
+CLOUDINARY_API_SECRET="aLwRjD6OV8fjE7wp6hcww_u-p0E"
+ 
